--- a/api-reservations/src/main/resources/application.yml
+++ b/api-reservations/src/main/resources/application.yml
@@ -27,3 +27,18 @@ info:
     groupId: '@project.groupId@'
     artifactId: '@project.artifactId@'
     version: '@project.version@'
+spring:
+  datasource:
+    url: jdbc:mysql://192.168.100.17:3306/flights_reservation
+    username: root
+    password: muppet
+  jpa:
+    show-sql: true
+
+  flyway:
+    locations: classpath:db
+    sql-migration-prefix: V
+    repeatable-sql-migration-prefix: R
+    sql-migration-separator: __
+    sql-migration--suffixes: .sql
+
